src/dsl-parser/schema_generator.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(entities) {return mergeOperations(entities)},
      peg$c1 = "table",
      peg$c2 = peg$literalExpectation("table", false),
      peg$c3 = "{",
      peg$c4 = peg$literalExpectation("{", false),
      peg$c5 = "}",
      peg$c6 = peg$literalExpectation("}", false),
      peg$c7 = function(table, columns) {return generateModel(table,columns)},
      peg$c8 = function(tableName) {return `{"operation": "Create", "resource": "Table", "migration": {"name": "${tableName}"}}`},
      peg$c9 = function(colName, colType, colDefs) {return `{"operation": "Create", "resource": "Column","migration":{"name":"${colName}","table":"","column": {"type":"${colType.type}", "definition": ${mergeColumnDefinition(colDefs,colType.definition)}}}}`},
      peg$c10 = function(colName, tableName, relType, relDefs) {return `{"operation": "Create", "resource": "${relType == "ManyToOneRelation"?"OneToManyRelation": relType}","migration":${generateRelationMigration(colName, tableName, relType, relDefs)}}` },
      peg$c11 = "[",
      peg$c12 = peg$literalExpectation("[", false),
      peg$c13 = "]",
      peg$c14 = peg$literalExpectation("]", false),
      peg$c15 = function(colDefs) {return colDefs},
      peg$c16 = "",
      peg$c17 = "OneToMany",
      peg$c18 = peg$literalExpectation("OneToMany", false),
      peg$c19 = "ManyToOne",
      peg$c20 = peg$literalExpectation("ManyToOne", false),
      peg$c21 = "ManyToMany",
      peg$c22 = peg$literalExpectation("ManyToMany", false),
      peg$c23 = "OneToOne",
      peg$c24 = peg$literalExpectation("OneToOne", false),
      peg$c25 = function(rel) {return `${rel}Relation`},
      peg$c26 = "OnUpdate",
      peg$c27 = peg$literalExpectation("OnUpdate", false),
      peg$c28 = ":",
      peg$c29 = peg$literalExpectation(":", false),
      peg$c30 = function(val) {return {"onUpdate": val}},
      peg$c31 = "OnDelete",
      peg$c32 = peg$literalExpectation("OnDelete", false),
      peg$c33 = function(val) {return {"onDelete": val}},
      peg$c34 = "CASCADE",
      peg$c35 = peg$literalExpectation("CASCADE", false),
      peg$c36 = "RESTRICT",
      peg$c37 = peg$literalExpectation("RESTRICT", false),
      peg$c38 = "SET NULL",
      peg$c39 = peg$literalExpectation("SET NULL", false),
      peg$c40 = "view",
      peg$c41 = peg$literalExpectation("view", false),
      peg$c42 = function(viewName, tableName, viewAttributes) {return generateView(viewName,tableName,viewAttributes)},
      peg$c43 = function(viewName) {return `{"operation": "Create", "resource": "View", "migration": {"name": "${viewName}"}}`},
      peg$c44 = "index",
      peg$c45 = peg$literalExpectation("index", false),
      peg$c46 = function(indexName, indexRequiredAttributes, indexOptionalAttributes) {return generateIndex(indexName,indexRequiredAttributes,indexOptionalAttributes)},
      peg$c47 = function(indexName) {return `{"operation": "Create", "resource": "Index", "migration": {"name": "${indexName}"}}`},
      peg$c48 = function(tableName) { return {"table": tableName}},
      peg$c49 = "columns",
      peg$c50 = peg$literalExpectation("columns", false),
      peg$c51 = function(column) {return `${column}`},
      peg$c52 = function(columns) {return {columns: columns} },
      peg$c53 = "type",
      peg$c54 = peg$literalExpectation("type", false),
      peg$c55 = function(type) { return {"type": type}},
      peg$c56 = "btree",
      peg$c57 = peg$literalExpectation("btree", false),
      peg$c58 = "hash",
      peg$c59 = peg$literalExpectation("hash", false),
      peg$c60 = "gist",
      peg$c61 = peg$literalExpectation("gist", false),
      peg$c62 = "gin",
      peg$c63 = peg$literalExpectation("gin", false),
      peg$c64 = "spgist",
      peg$c65 = peg$literalExpectation("spgist", false),
      peg$c66 = "brin",
      peg$c67 = peg$literalExpectation("brin", false),
      peg$c68 = "fields",
      peg$c69 = peg$literalExpectation("fields", false),
      peg$c70 = function(fieldName) {return `${fieldName}`},
      peg$c71 = function(fields) {return {"fields": fields} },
      peg$c72 = "condition",
      peg$c73 = peg$literalExpectation("condition", false),
      peg$c74 = function(formula) {return `Formula: ${formula}`},
      peg$c75 = function(formulaWithPrefix) {return {"condition": {"$and": [{[formulaWithPrefix] : {"$eq": true}}]}}},
      peg$c76 = "limit",
      peg$c77 = peg$literalExpectation("limit", false),
      peg$c78 = function(limit) {return {"limit": limit}},
      peg$c79 = "offset",
      peg$c80 = peg$literalExpectation("offset", false),
      peg$c81 = function(offset) {return {"offset": offset}},
      peg$c82 = "populate",
      peg$c83 = peg$literalExpectation("populate", false),
      peg$c84 = function(populate) {return {"populate": populate} },
      peg$c85 = "groupBy",
      peg$c86 = peg$literalExpectation("groupBy", false),
      peg$c87 = function(groupBy) {return {"groupBy": groupBy} },
      peg$c88 = "join",
      peg$c89 = peg$literalExpectation("join", false),
      peg$c90 = "left",
      peg$c91 = peg$literalExpectation("left", false),
      peg$c92 = "inner",
      peg$c93 = peg$literalExpectation("inner", false),
      peg$c94 = function(join) {return {"join": join}},
      peg$c95 = "role",
      peg$c96 = peg$literalExpectation("role", false),
      peg$c97 = function(role, permissions) {return generateRolePermission(role,permissions)},
      peg$c98 = function(roleName) {return `{"operation":"Create", "resource":"Role", "migration": {"name":"${roleName}", "deletionProtection":false}}`},
      peg$c99 = function(typeName) {return `"${typeName}"`},
      peg$c100 = function(types, tableName, formula) {return formula},
      peg$c101 = function(types, tableName, condition) {return {tableName:`"${tableName}"`, condition: JSON.stringify(condition)}},
      peg$c102 = function(types, tables) {return generatePermissions(types, tables)},
      peg$c103 = function(formulaWithPrefix) {return {"$and": [{[formulaWithPrefix] : {"$eq": true}}]}},
      peg$c104 = "insert",
      peg$c105 = peg$literalExpectation("insert", false),
      peg$c106 = "select",
      peg$c107 = peg$literalExpectation("select", false),
      peg$c108 = "update",
      peg$c109 = peg$literalExpectation("update", false),
      peg$c110 = "delete",
      peg$c111 = peg$literalExpectation("delete", false),
      peg$c112 = "insight",
      peg$c113 = peg$literalExpectation("insight", false),
      peg$c114 = "bigint",
      peg$c115 = peg$literalExpectation("bigint", false),
      peg$c116 = function() {return {"type":"bigint", "definition": { "default": 0, "nullable": true }}},
      peg$c117 = "boolean",
      peg$c118 = peg$literalExpectation("boolean", false),
      peg$c119 = function() {return {"type":"boolean", "definition": { "default": null, "nullable": true }}},
      peg$c120 = "datetime",
      peg$c121 = peg$literalExpectation("datetime", false),
      peg$c122 = function() {return {"type":"datetime", "definition" : { "default": "now()", "exact": false, "nullable": true, "triggers": [] }}},
      peg$c123 = "date",
      peg$c124 = peg$literalExpectation("date", false),
      peg$c125 = function() {return {"type":"date", "definition" : { "default": "now()", "exact": false, "nullable": true }}},
      peg$c126 = "file",
      peg$c127 = peg$literalExpectation("file", false),
      peg$c128 = "extensions",
      peg$c129 = peg$literalExpectation("extensions", false),
      peg$c130 = function(val) {return val},
      peg$c131 = function(extensions) {return {"type":"file","definition" : {"extensions": extensions.length > 0? extensions[0] : ".png, .jpg, .svg","default": { "filename": "", "size": 0, "mime": "application/octet-stream" }}}},
      peg$c132 = "float",
      peg$c133 = peg$literalExpectation("float", false),
      peg$c134 = function() {return {"type":"float","definition": {"precision": 8, "scale": 2, "default": 0, "nullable": true}}},
      peg$c135 = "int",
      peg$c136 = peg$literalExpectation("int", false),
      peg$c137 = function() {return {"type":"integer", "definition": {"default":0, "nullable":true}}},
      peg$c138 = "json",
      peg$c139 = peg$literalExpectation("json", false),
      peg$c140 = function() {return {"type":"json", "definition": {"default":null, "nullable":true}}},
      peg$c141 = "linestring",
      peg$c142 = peg$literalExpectation("linestring", false),
      peg$c143 = function() {return {"type":"linestring", "definition": {"default":null, "nullable":true}}},
      peg$c144 = "multiFile",
      peg$c145 = peg$literalExpectation("multiFile", false),
      peg$c146 = function() {return {"type":"multiple_files", "definition": {"default":null, "nullable":true}}},
      peg$c147 = "password",
      peg$c148 = peg$literalExpectation("password", false),
      peg$c149 = function() {return {"type":"password", "definition": {"textType": "text", "nullable":true, "algorithm": "sha256", "salt":"admin-secret"}}},
      peg$c150 = "point",
      peg$c151 = peg$literalExpectation("point", false),
      peg$c152 = function() {return {"type":"point", "definition": {"default": null, "nullable":true}}},
      peg$c153 = "polygon",
      peg$c154 = peg$literalExpectation("polygon", false),
      peg$c155 = function() {return {"type":"polygon", "definition": {"default": null, "nullable":true}}},
      peg$c156 = "raw",
      peg$c157 = peg$literalExpectation("raw", false),
      peg$c158 = function() {return {"type":"polygon", "definition": {"default": null, "nullable":true, "raw": "(price * 2)"}}},
      peg$c159 = "richtext",
      peg$c160 = peg$literalExpectation("richtext", false),
      peg$c161 = function() {return {"type":"richtext", "definition": {"default": null, "nullable":true}}},
      peg$c162 = function() {return {"type":"select", "definition": {"default": null, "enums":[], "nullable": true}}},
      peg$c163 = "string",
      peg$c164 = peg$literalExpectation("string", false),
      peg$c165 = function() {return {"type":"text", "definition": {"textType": "text"}}},
      peg$c166 = "timestamp",
      peg$c167 = peg$literalExpectation("timestamp", false),
      peg$c168 = function() {return {"type":"timestamp", "definition": {"default": "now()", "nullable": true}}},
      peg$c169 = "enums",
      peg$c170 = peg$literalExpectation("enums", false),
      peg$c171 = function(values) {return {"enums": values }},
      peg$c172 = "pk",
      peg$c173 = peg$literalExpectation("pk", false),
      peg$c174 = function() {return {"primary_key":true, "nullable":false}},
      peg$c175 = "unique",
      peg$c176 = peg$literalExpectation("unique", false),
      peg$c177 = function(val) {return {"unique": val}},
      peg$c178 = "nullable",
      peg$c179 = peg$literalExpectation("nullable", false),
      peg$c180 = function(val) {return {"nullable": val}},
      peg$c181 = "default",
      peg$c182 = peg$literalExpectation("default", false),
      peg$c183 = function(val) {return {"default": val}},
      peg$c184 = "fk",
      peg$c185 = peg$literalExpectation("fk", false),
      peg$c186 = "(",
      peg$c187 = peg$literalExpectation("(", false),
      peg$c188 = ")",
      peg$c189 = peg$literalExpectation(")", false),
      peg$c190 = peg$otherExpectation("valid variable name syntax"),
      peg$c191 = /^[a-zA-Z_0-9]/,
      peg$c192 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
      peg$c193 = function() {return text()},
      peg$c194 = peg$anyExpectation(),
      peg$c195 = peg$otherExpectation("string"),
      peg$c196 = "\"",
      peg$c197 = peg$literalExpectation("\"", false),
      peg$c198 = /^[^"]/,
      peg$c199 = peg$classExpectation(["\""], true, false),
      peg$c200 = function(val) { return `${val.join('')}`},
      peg$c201 = "'",
      peg$c202 = peg$literalExpectation("'", false),
      peg$c203 = /^[^']/,
      peg$c204 = peg$classExpectation(["'"], true, false),
      peg$c205 = peg$otherExpectation("integer"),
      peg$c206 = /^[0-9]/,
      peg$c207 = peg$classExpectation([["0", "9"]], false, false),
      peg$c208 = function() { return parseInt(text(), 10); },
      peg$c209 = peg$otherExpectation("float"),
      peg$c210 = ".",
      peg$c211 = peg$literalExpectation(".", false),
      peg$c212 = function(left, right) { return parseFloat(left.join("") + "." +   right.join("")); },
      peg$c213 = peg$otherExpectation("object"),
      peg$c214 = function(props) {return props},
      peg$c215 = function(props) {return buildObject(props)},
      peg$c216 = function(key, value) {return {[key] : value}},
      peg$c217 = peg$otherExpectation("boolean"),
      peg$c218 = "true",
      peg$c219 = peg$literalExpectation("true", false),
      peg$c220 = function() { return true },
      peg$c221 = "false",
      peg$c222 = peg$literalExpectation("false", false),
      peg$c223 = function() { return false},
      peg$c224 = peg$otherExpectation("whitespace"),
      peg$c225 = /^[ \t\n\r]/,
      peg$c226 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseEntities();

    return s0;
  }

  function peg$parseEntities() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseModel();
    if (s2 === peg$FAILED) {
      s2 = peg$parseView();
      if (s2 === peg$FAILED) {
        s2 = peg$parseRolePermission();
        if (s2 === peg$FAILED) {
          s2 = peg$parseIndex();
        }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseModel();
      if (s2 === peg$FAILED) {
        s2 = peg$parseView();
        if (s2 === peg$FAILED) {
          s2 = peg$parseRolePermission();
          if (s2 === peg$FAILED) {
            s2 = peg$parseIndex();
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseModel() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
